--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,19 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.0",
+    "@types/socket.io": "^3.0.2",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "scripts": {
+    "socket": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   }
 }
