--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,20 @@
 {
   "name": "socket-io",
   "description": "socket io practise",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "author": {
     "email": "devlopersabbir@gmail.com",
     "name": "Sabbir Hossain Shuvo",
     "url": "https://github.com/devlopersabbir"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
